# genetic_algorithms_rs

./: Cargo.toml  README.md
benches/: ndarray_test.rs
src/: lib.rs  main.rs  opts.rs  system.rs
