[package]
name = "genetic_algorithms"
version = "0.1.0"
authors = ["Renato <renato145@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.14.0"
indicatif = "0.15.0"
clap = "3.0.0-beta.2"
specs = { version = "0.16.1", features = ["specs-derive"] }
rand = "0.8.3"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
ndarray = "0.14.0"
ndarray-rand = "0.13.0"

[[bench]]
name = "ndarray_test"
harness = false
